# backend-rust-axum

./: Cargo.toml  flake.nix
.github/workflows/: core.yml  scheduled.yml
src/: cli.rs  logger.rs  main.rs  server.rs  tracer.rs
