[package]
name = "backend-rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.11", features = ["ws"] }
clap = { version = "4.1.11", features = ["derive"] }
env_logger = "0.10.0"
hyper = { version = "0.14.25", features = ["full"] }
log = { version = "0.4.17", features = ["serde", "std"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = { version = "0.3.16", features = ["serde", "serde_json"] }

